[gd_scene load_steps=7 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/italicBold.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=1]
resource_name = "opening_text_anim"
length = 21.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 4.5, 5, 5.5, 6, 7, 8.5, 9.5, 10, 10.5, 11, 11.5, 12.5, 13.5, 14.5, 16, 17, 20 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.259, 0.27, 0.273, 0.287, 0.287, 0.527, 0.527, 0.617, 0.623, 0.629, 0.642, 0.642, 0.782, 0.782, 0.913, 0.913, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "access_granted_anim"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.316, 0.342, 0.381, 0.407, 0.407, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "scroll_up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -220 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initialize" type="MarginContainer" parent="Menu"]
margin_right = 1180.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="opening_text" type="RichTextLabel" parent="Menu/initialize"]
margin_right = 1180.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 150 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=grey]INITIALIZING TERMLINK PROTOCOL...
Fingerprint Scan: Unavailable

Overriding...
override complete

ENTER PASSWORD:[/color] G3tH4unt3d"
visible_characters = 0
percent_visible = 0.0
text = "INITIALIZING TERMLINK PROTOCOL...
Fingerprint Scan: Unavailable

Overriding...
override complete

ENTER PASSWORD: G3tH4unt3d"
scroll_active = false

[node name="opeining_text_anim_player" type="AnimationPlayer" parent="Menu/initialize/opening_text"]
anims/opening_text_anim = SubResource( 1 )

[node name="access_granted" type="RichTextLabel" parent="Menu/initialize/opening_text"]
margin_top = 150.0
margin_right = 1180.0
margin_bottom = 620.0
rect_min_size = Vector2( 1180, 470 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=grey]loading...

[color=green][b]ACCESS GRANTED[/b] [/color]"
visible_characters = 0
percent_visible = 0.0
text = "loading...

ACCESS GRANTED "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="access_granted_anim_player" type="AnimationPlayer" parent="Menu/initialize/opening_text/access_granted"]
anims/access_granted_anim = SubResource( 2 )

[node name="scroll_up_anim_player" type="AnimationPlayer" parent="Menu/initialize"]
anims/scroll_up = SubResource( 3 )

[node name="buttons" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 1230.0
margin_bottom = 670.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personal_info" type="Button" parent="buttons"]
margin_right = 1180.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 4 )
shortcut_in_tooltip = false
action_mode = 0
text = "Personal Info"
flat = true
align = 0

[node name="codex" type="Button" parent="buttons"]
margin_top = 29.0
margin_right = 1180.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Codex"
flat = true
align = 0

[node name="view_logs" type="Button" parent="buttons"]
margin_top = 58.0
margin_right = 1180.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "View Logs"
flat = true
align = 0

[node name="combat" type="Button" parent="buttons"]
margin_top = 87.0
margin_right = 1180.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Combat"
flat = true
align = 0

[node name="options" type="Button" parent="buttons"]
margin_top = 116.0
margin_right = 1180.0
margin_bottom = 141.0
custom_fonts/font = ExtResource( 4 )
action_mode = 0
text = "Options"
flat = true
align = 0
[connection signal="animation_finished" from="Menu/initialize/opening_text/opeining_text_anim_player" to="." method="_on_opeining_text_anim_player_animation_finished"]
[connection signal="animation_finished" from="Menu/initialize/opening_text/access_granted/access_granted_anim_player" to="." method="_on_access_granted_anim_player_animation_finished"]
[connection signal="animation_finished" from="Menu/initialize/scroll_up_anim_player" to="." method="_on_scroll_up_anim_player_animation_finished"]
